--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@headlessui/react": "^0.0.0-insiders.d8d852e",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.5",
+    "@tanstack/react-query": "^4.23.0",
+    "@tanstack/react-query-devtools": "^4.23.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
