--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REACT_APP_API_URL_LIVE = https://api.bloodfuse.com/api/
 REACT_APP_API_URL_TEST = https://backend.testnet.bloodfuse.com/api/
 REACT_APP_API_URL_LOCAL = http://localhost:3873/api/
 # {options : ['mainNet', 'testNet', 'local']}
-REACT_APP_MODE = local 
+REACT_APP_MODE = mainNet 
 REACT_APP_GOOGLE_API_KEY = 
 REACT_APP_SECRET_KEY = 6Lcj3z8hAAAAAEw-OULL09qBfyZSQCuXQgqNUZwL
 REACT_APP_SITE_KEY = 6Lcj3z8hAAAAAIX3CGv8e6WQ7QO11WIWcuYqGAQ3
