--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@headlessui/react": "^0.0.0-insiders.d8d852e",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.5",
+    "@stacks/connect": "^7.0.0",
+    "@stacks/connect-react": "^20.0.0",
+    "@stacks/network": "^5.0.0",
+    "@stacks/transactions": "^5.0.1",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +19,8 @@
     "google-map-react": "^2.2.0",
     "google-maps-react": "^2.0.6",
     "gsap": "^3.10.4",
+    "qrcode": "^1.5.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
